# matrix_multiplication

./: CMakeLists.txt  README.md  build.bat
src/: matrix_mul.cpp  matrix_mul.ispc  matrix_mul_cuda.cu  timing.h
